--- a/static/css/tooplate-main.css
+++ b/static/css/tooplate-main.css
@@ -420,7 +420,7 @@ a {
 	border: 1px solid #eee;
 	border-radius: 5px;
 	font-weight: 700;
-	color: #1e1e1e;
+	color: #47817F;
 	font-size: 15px;
 	text-decoration: none;
 	transition: all 0.5s;
